(fix) charts jumping on screener page, firefox

--- a/src/ducks/Watchlists/Widgets/VolumeChart/ProjectsChart.module.scss
+++ b/src/ducks/Watchlists/Widgets/VolumeChart/ProjectsChart.module.scss
@@ -20,7 +20,6 @@
   position: absolute;
   top: 0;
   width: 100%;
-  overflow-y: auto;
   height: 358px;
 }
 
